# DBMS-RK

./: .gitignore  CMakeLists.txt  run.bat
client/network/: .gitignore  DbClient.cpp  DbClient.h
client/ui/: ConnectDialog.cpp  ConnectDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
data/: ruanko.db  ruanko_users.usr
data/Ruanko/: class.tb  class.tdf  class.tic  class.trd  combo_test.tb  combo_test.tdf  combo_test.tic  course.tb  course.tdf  course.tic  course.trd  sc.tb  sc.tic  sc.trd  student.tb  student.tdf  student.tic  student.trd  t_chk1.tb  t_chk1.tdf  t_chk1.tic  t_chk2.tb  t_chk2.tdf  t_chk2.tic  t_chk2.trd  t_chk3.tb  t_chk3.tdf  t_chk3.tic  t_chk3.trd  t_def.tb  t_def.tdf  t_def.tic  t_def.trd  t_id.tb  t_id.tdf  t_id.tic  t_id.trd  teacher.tb  teacher.tic  teacher.trd  (+17 more)
data/demo/: sc.tb  sc.tdf  student.tb  teacher.tb  teacher.tdf  teaching.tb  teaching.tdf  teaching.tic
doc/: ~$ Microsoft Word 文档.docx  新建 Microsoft Word 文档.docx  测试用例.docx  系统设计报告.docx  详细设计说明书.md
server/: create_tables.sql  doc_output.txt  doc_tables.txt  insert_data.sql  main.cpp  network_main.cpp  pdf_full.txt  pdf_output.txt  pdf_req.txt  requirements_checklist.md  test_alter_drop.sql  test_new_features.sql  test_queries.sql
server/.claude/: settings.local.json
server/include/catalog/: ICatalogManager.h
server/include/common/: Constants.h
server/include/execution/: IExecutor.h  IOperator.h
server/include/index/: IIndexManager.h
server/include/integrity/: .gitignore  IIntegrityManager.h
server/include/maintenance/: IDatabaseMaintenance.h
server/include/meta/: TableMeta.h
server/include/network/: NetworkProtocol.h  SqlService.h  TcpServer.h
server/include/parser/: ASTNode.h  CreateTableASTNode.h  DeleteASTNode.h  DropTableASTNode.h  ISQLparser.h  IndexASTNode.h  InsertASTNode.h  SelectASTNode.h  Token.h  UpdateASTNode.h
server/include/security/: ISecurityManager.h
server/include/storage/: IStorageEngine.h
server/src/catalog/: CatalogManagerImpl.cpp  CatalogManagerImpl.h
server/src/execution/: AlterTableExecutor.cpp  AlterTableExecutor.h  BackupRestoreExecutor.cpp  BackupRestoreExecutor.h  CreateDatabaseExecutor.cpp  CreateDatabaseExecutor.h  CreateExecutor.cpp  CreateExecutor.h  DeleteExecutor.cpp  DeleteExecutor.h  DropDatabaseExecutor.cpp  DropDatabaseExecutor.h  DropTableExecutor.cpp  DropTableExecutor.h  ExecutorFactory.cpp  ExecutorFactory.h  IndexExecutor.cpp  IndexExecutor.h  IndexMaintenance.cpp  IndexMaintenance.h  InsertExecutor.cpp  InsertExecutor.h  QueryBuilder.cpp  QueryBuilder.h  SelectExecutor.cpp  SelectExecutor.h  UpdateExecutor.cpp  UpdateExecutor.h  UseDatabaseExecutor.cpp  UseDatabaseExecutor.h  (+2 more)
(+30 files in other folders)
